--- a/css/home.css
+++ b/css/home.css
@@ -7,13 +7,13 @@
 	text-align: center;
 }
 
-.ak-header {
+.header {
 	color: white;
 	font-size: 1.5em;
 	margin: 10px 0px;
 }
 
-.ak-separator {
+.separator {
 	width: 100%;
 	border-bottom: 3px solid #2a2a2a;
 	margin-bottom: 10px;
@@ -186,7 +186,7 @@
 }
 
 @media (max-width: 700px ){
-	.ak-header{
+	.header{
 		text-align: center;
 	}
 	.home-sub1{
